--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,4 +1,11 @@
-<h1 style="font-size: 60px; font-weight: bold;">
-    
-    Fruits et légumes
-</h1>
+h1{
+font-size: 60px; 
+font-weight: bold;   
+text-align: center;
+}
+
+img {
+width: 200px;
+height: 200px;
+border-radius:8px;
+}
