--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,3 +1,8 @@
+body{
+background-color:lightgreen;
+}
+
+
 h1{
 font-size: 60px; 
 font-weight: bold;   
@@ -8,4 +13,6 @@ img {
 width: 200px;
 height: 200px;
 border-radius:8px;
+display: block;
+margin:auto;
 }
