--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -36,3 +36,25 @@ margin:auto;
     padding: 15px 10px;
     margin: 0 30px 30px;
 }
+
+.banner-infos {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;          
+    gap: 40px;
+}
+
+
+.info {
+    text-align: center;
+    max-width: 250px;
+    font-size: 16px;
+}
+
+
+.info-icon {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
