--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -7,7 +7,8 @@ h1{
 font-size: 60px; 
 font-weight: bold;   
 margin: 40px;
-border: 10px;
+border: 2px solid #000000;
+background-color: lightgreen;
 }
 
 img {
