--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -69,3 +69,15 @@ margin:auto;
     font-size: 40px;
     margin-bottom: 10px;
 }
+
+.btn-profil {
+    display: inline-block;
+    padding: 10px 25px;
+    background-color: #ffffff;
+    border: 2px solid #000000;
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
+    border-radius: 6px;
+    font-weight: bold;
+}
