--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -31,7 +31,7 @@ margin:auto;
     font-size: 20px;
     border-radius: 6px;
     font-weight: bold;
-    margin: 300px;
+    margin: 30px 350px 30px;
 }
 
 .banner {
@@ -83,7 +83,7 @@ margin:auto;
     font-size: 20px;
     border-radius: 6px;
     font-weight: bold;
-    margin: 200px;
+    margin: 30px 50px 30px;
 }
 
 
