--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -42,7 +42,7 @@ margin:auto;
     font-size: 20px;
     border-radius: 6px;
     font-weight: bold;
-    margin: 300px;
+    margin: 20px;
 }
 
 .banner {
@@ -94,7 +94,7 @@ margin:auto;
     font-size: 20px;
     border-radius: 6px;
     font-weight: bold;
-    margin: 200px;
+    margin: 20px;
 }
 
 
@@ -213,3 +213,4 @@ margin:auto;
             border: 5px solid #333; /* Bordure autour du titre */
             padding: 10px;
             display: inline-block;
+        }
