panier class suppr

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -214,3 +214,10 @@ margin:auto;
             padding: 10px;
             display: inline-block;
         }
+
+.h2{
+            border: 5px solid #333; /* Bordure autour du titre */
+            padding: 10px;
+            display: inline-block;
+
+}
