--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -401,7 +401,8 @@ body {
 }
 
  h3 {
-            border: 2px solid #333; 
-            padding: 10px;
-            display: inline-block;
-        }
+    border: 2px solid #333; 
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
